--- a/_posts/2017-07-14-test.markdown
+++ b/_posts/2017-07-14-test.markdown
@@ -1,9 +1,10 @@
 ---
 layout: post
 title:  "test"
-ref: welcome
+ref: test
 date:   2017-07-14 16:17:44 +0500
 categories: category
 lang: en
 ---
+
 Hello Canada!  Bonjour Canada!
