--- a/_drafts/2017-08-25-top-100-for-gc.markdown
+++ b/_drafts/2017-08-25-top-100-for-gc.markdown
@@ -8,20 +8,26 @@ published: false
 lang: en
 ---
  
-Every government institution should have a complete understanding of the tasks they support. All of the content on your site should support one or more actual tasks. In managing Canada.ca, we want to understand the top tasks across the entire government. 
+Every government institution should have a complete understanding of the tasks they support. In managing Canada.ca, we want to understand the top tasks across the entire government. To help with that, we've compiled a [top task list for the Government of Canada](). 
  
 ## What we mean by a task
  
-A task is what someone comes to the site to do. For example, someone might want to renew their passport, look up a vaccination schedule, or apply for funding for their farm. These are the kinds of individual tasks we want to identify and help support. 
+A task is what someone wants to do. For example, some typical tasks might be: 
 
-The Government of Canada supports an incredibly wide list of tasks. Government departments and agencies have to manage all of these, but at the top level of Canada.ca, we need to focus on the tasks used by the majority of people. If we understand these tasks, we can refine content, information architecture, and interactions to make them easier to achieve. 
+* renew my passport
+* look up a vaccination schedule
+* apply for funding for my farm
+
+These are the kinds of individual tasks we want to identify and help support. 
+
+The Government of Canada supports an incredibly wide list of tasks. Government departments and agencies have to manage all of these. Looking at Canada.ca as a whole, we need to focus on the tasks used by most people. If we understand these top tasks, we can refine content, information architecture, and functionality to make them easier to achieve. 
  
 * [What Really Matters: Focusing on Top Tasks](https://alistapart.com/article/what-really-matters-focusing-on-top-tasks)
 * [How to conduct a top task analysis](https://measuringu.com/top-tasks/)
  
 ## The government-wide top task list
  
-In 2013, we began working towards a more centralized web presence for the Government of Canada. While some people know which department provides a service, most don’t know or care. We focused on tasks instead of departments, so we could organize content based on what people were actually looking for. 
+In 2013, we began working towards a more centralized web presence for the Government of Canada. While some people know which department provides a service, most don’t know or care. It doesn't always make sense to organize services and information by the department that provides it. By focusing on tasks instead of departments, we could organize content based on what people were actually looking for. 
 
 This work resulted in an initial list of top tasks across the government. We used that list to help design the themes that organize Canada.ca content. The list was updated in 2015, and this most recent update continues on from those efforts. 
  
@@ -44,22 +50,14 @@ Some institutions had already conducted exercises to determine their top tasks. 
 
 By reviewing these sources and carefully analyzing the results, departments could identify all of the tasks they support for the public. 
  
-We didn't specify how many tasks to provide. There's a big difference in the size and scope of institutions in the federal government, and we wanted organizations to come up with the appropriate number of tasks for them. An organization with a more focused mandate may have only a handful of tasks. One with a broad mandate could have dozens. 
- 
-We asked institutions to provide at least one task for each theme where they have content. Basically, if they have content in a theme, there has to be a reason for people to read it. If the content doesn’t support a real task, then it shouldn't be there!
- 
 ### Where people "start" the task
  
 In previous versions of the list, we found that some tasks seemed to have an unusually high number of visits. This might be because there were a lot of pages associated with a task, or because the task involved a search interface that was reporting separately for every search result. To try to avoid complications from these issues, we instead tried to focus on the page where most people tend to start the task. 
- 
-For example, we have a lot of content related to immigrating to Canada. You might go through several pages to understand eligibility, entry requirements, timelines etc. But a reasonable start page for this task is the [Immigrate to Canada](http://www.cic.gc.ca/english/immigrate/index.asp) topic page. By tracking just that page, we get a sense of the number of people attempting the task. You could find out how to immigrate without going to that page, but this method provides a more equal comparison across the tasks. 
- 
+
 ### A sense of the traffic
  
 Once we have a start page, we wanted to get a sense of the amount of traffic the page gets. This isn't necessarily a strong indicator of how important a task is. It's possible that a task is a top task, but people have a hard time finding it, so visits are low. It's less likely that something might not be a top task, but still gets a lot of traffic; but it's possible. 
- 
-This isn’t a perfect method. Some tasks might not have an obvious start page. Or, there may well be a start page that people don't necessarily go to. A good example of that is the interface to [search federal corporations](https://www.ic.gc.ca/app/scr/cc/CorporationsCanada/fdrlCrpSrch.html?locale=en_CA). The search interface seems like a reasonable start page, but it's not actively visited. Instead, most people get to a company page by searching for the company in Google. Still, on balance this method provides a reasonable means of assessing the relative interest in a task. 
- 
+
 ### Search terms people use to get to the task
  
 Search logs provide a view into what people are thinking when they visit a website. They provide insight into the terms people use. They also show how often people are looking for particular things. If you can tell what terms people used to get to the top tasks, then you can refine the related content to make that path even easier for people. 
@@ -76,10 +74,6 @@ Again, just because an issue comes to a call centre a lot doesn’t mean it’s a to
  
 We have a good view of how many people are visiting Canada.ca with mobile devices, but not how that proportion varies from task to task. This data provides a useful view into where some tasks remain solidly on the desktop, and which tend to be accessed more through mobile devices.
 
-### The theme where the task is accomplished
- 
-Every task should fit within one of the themes on Canada.ca. Knowing which theme each task belongs to helps us understand how the site is organized. If there is no reasonable place to position a task, then that’s a sign that the structure of the site may need some work. 
- 
 ## Analyzing the results
  
 Once we had the data, it was just a matter of digging through to make the list. A big part of this work was identifying a core task and its supporting sub-tasks. 
@@ -92,7 +86,7 @@ That doesn't necessarily mean that this is how you should write link labels on y
 
 We collected hundreds of tasks, but picked out 100 of the most visited tasks to make the current top task list, sorted by visits to the start page. The list provides a good snapshot of what most people are coming to government websites to do.
  
-## What's next
+## Next steps
  
 We're already using the list to help us plan and prioritize upcoming task-based optimization projects. It also feeds into overall Canada.ca optimization, both at the theme level and above. We want to keep this list evergreen, constantly refining it as we learn more about what people are coming to Canada.ca to do. To that end, we’ll continue to collect this data from institutions across government. 
  
