updated contact block

--- a/_drafts/2017-08-25-top-100-for-gc.markdown
+++ b/_drafts/2017-08-25-top-100-for-gc.markdown
@@ -97,9 +97,9 @@ Top task management is not about migrating all content to new platforms, removin
 -->
 And the web isn't the end. We are also planning to use top tasks to inform service policy. Top tasks currently only reflect the online portion of tasks, but we're collaborating with service providers to make sure the dots are connected with call centers, service desks and the other ways government serves Canadians.
 
-## Find out more
+## What do you think?
 
-We’re happy to share what we’ve learned. If you’ve got questions, email us at <ux.eu@tbs-sct.gc.ca>
+We want to hear from you! You can post tweets using the hashtag #Canadadotca or email us at <ux.eu@tbs-sct.gc.ca>.
 
 ## Explore further
 
